basic structure adde

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
 <p>App Component</p>
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <h2>Yallah</h2>
+    </div>
+  </div>
+</div>
