--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<p>App Component</p>
+<app-header></app-header>
 <div class="container">
   <div class="row">
-    <div class="col-md-12">
+    <div class="col-md-12 mt-3">
+      <p>App Component</p>
+
       <h2>Yallah</h2>
     </div>
   </div>
