--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,7 @@
 <app-header></app-header>
-<div class="container">
+<div class="container mt-2">
   <div class="row">
-    <div class="col-md-12 mt-3">
-      <p>App Component</p>
-
-      <h2>Yallah</h2>
+    <div class="col-12 col-md-12">
       <app-recipes></app-recipes>
       <app-shopping-list></app-shopping-list>
     </div>
