--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,8 @@
 <div class="row">
-  <div class="col-md-5">
+  <div class="col-5 col-md-5 col-sm-12">
     <app-recipe-list></app-recipe-list>
   </div>
-  <div class="col-md-7">
+  <div class="col-7 col-md-7 col-sm-12">
     <app-recipe-detail></app-recipe-detail>
   </div>
 </div>
