--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,1 +1,10 @@
-<p>recipe-item works!</p>
+<a href="#"
+   class="list-group-item list-group-item-action clearfix d-flex justify-content-between align-items-center">
+  <div class="pull-left">
+    <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
+    <p class="list-group-item-text mb-1">{{ recipe.description }}</p>
+  </div>
+  <span class="pull-rigg">
+        <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 50px;">
+      </span>
+</a>
