--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -6,15 +6,8 @@
 <hr>
 <div class="row">
   <div class="col-sm-12 list-group">
-    <a href="#" class="list-group-item list-group-item-action clearfix d-flex justify-content-between align-items-center" *ngFor="let recipe of recipes">
-      <div class="pull-left">
-        <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-        <p class="list-group-item-text mb-1">{{ recipe.description }}</p>
-      </div>
-      <span class="pull-rigg">
-        <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 50px;">
-      </span>
-    </a>
-    <app-recipe-item></app-recipe-item>
+    <app-recipe-item
+    *ngFor="let recipeElement of recipes"
+    [recipe]="recipeElement"></app-recipe-item>
   </div>
 </div>
