--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -8,6 +8,7 @@
   <div class="col-sm-12 list-group">
     <app-recipe-item
     *ngFor="let recipeElement of recipes"
-    [recipe]="recipeElement"></app-recipe-item>
+    [recipe]="recipeElement"
+    (recipeSelected)="onRecipeSelected(recipeElement)"></app-recipe-item>
   </div>
 </div>
