--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,8 +1,13 @@
 <div class="row">
   <div class="col-5 col-md-5 col-sm-12">
-    <app-recipe-list></app-recipe-list>
+    <app-recipe-list
+    (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
   </div>
   <div class="col-7 col-md-7 col-sm-12">
-    <app-recipe-detail></app-recipe-detail>
+    <app-recipe-detail *ngIf="selectedRecipe; else infoText"
+    [recipe]="selectedRecipe"></app-recipe-detail>
+    <ng-template #infoText>
+      <p class="alert-info">Please select a Recipe!</p>
+    </ng-template>
   </div>
 </div>
