--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -15,11 +15,11 @@
 
 <div class="row">
   <div class="col-sm-12">
-    <div class="btn-group">
-      <button class="btn btn-primary dropdown-toggle">
+    <div appDropdown class="btn-group" id="dropdownBtn" (click)="show = !show">
+      <button class="btn btn-primary dropdown-toggle" aria-expanded="false">
         Manage Recipe <span class="caret"></span>
       </button>
-      <ul class="dropdown-menu">
+      <ul class="dropdown-menu" [class.show]="show">
         <li><a href="#">To Shopping List</a></li>
         <li><a href="#">Edit Recipe</a></li>
         <li><a href="#">Delete Recipe</a></li>
