--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -2,11 +2,13 @@
    class="list-group-item list-group-item-action clearfix d-flex justify-content-between align-items-center"
   (click)="onSelected()"
 >
-  <div class="pull-left">
-    <h4 class="list-group-item-heading">{{ recipe.name }}</h4>
-    <p class="list-group-item-text mb-1">{{ recipe.description }}</p>
+  <div class="col-8 col-md-8">
+    <div class="card-body">
+      <h4 class="list-group-item-heading card-title">{{ recipe.name }}</h4>
+      <p class="list-group-item-text mb-1 card-text">{{ recipe.description }}</p>
+    </div>
   </div>
-  <span class="pull-rigg">
-        <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 50px;">
-      </span>
+  <div class="col-4 col-md-4">
+    <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 140px;">
+  </div>
 </a>
