--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,11 +3,11 @@
     <app-recipe-list
     (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
   </div>
-  <div class="col-7 col-md-7 col-sm-12">
+  <div class="col-7 col-md-7 col-sm-12 card-body">
     <app-recipe-detail *ngIf="selectedRecipe; else infoText"
     [recipe]="selectedRecipe"></app-recipe-detail>
     <ng-template #infoText>
-      <p class="alert-info">Please select a Recipe!</p>
+      <p class="alert alert-info alert-dismissible" role="alert">Please select a Recipe!</p>
     </ng-template>
   </div>
 </div>
