--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -1,7 +1,6 @@
 <div class="row">
   <div class="col-5 col-md-5 col-sm-12">
-    <app-recipe-list
-    (recipeWasSelected)="selectedRecipe = $event"></app-recipe-list>
+    <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-7 col-md-7 col-sm-12 card-body">
     <app-recipe-detail *ngIf="selectedRecipe; else infoText"
