--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,8 +8,8 @@
     </div>
     <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
       <ul class="nav navbar-nav mr-auto">
-        <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('recipe')">Recipes</a></li>
-        <li class="nav-item"><a href="#" class="nav-link" (click)="onSelect('shopping-list')">Shopping List</a></li>
+        <li class="nav-item"><a [routerLink]="['recipes']"  class="nav-link" (click)="onSelect('recipe')">Recipes</a></li>
+        <li class="nav-item"><a [routerLink]="['shopping-list']" class="nav-link" (click)="onSelect('shopping-list')">Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="nav-item dropdown" (click)="show = !show">
