--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,5 +1,6 @@
-<a href="#"
-   class="list-group-item list-group-item-action clearfix d-flex justify-content-between align-items-center"
+<a
+  style="cursor: pointer;"
+  class="list-group-item list-group-item-action clearfix d-flex justify-content-between align-items-center"
   (click)="onSelected()"
 >
   <div class="col-8 col-md-8">
