--- a/src/app/recipes/recipes.component.html
+++ b/src/app/recipes/recipes.component.html
@@ -3,10 +3,6 @@
     <app-recipe-list></app-recipe-list>
   </div>
   <div class="col-7 col-md-7 col-sm-12 card-body">
-    <app-recipe-detail *ngIf="selectedRecipe; else infoText"
-    [recipe]="selectedRecipe"></app-recipe-detail>
-    <ng-template #infoText>
-      <p class="alert alert-info alert-dismissible" role="alert">Please select a Recipe!</p>
-    </ng-template>
+    <router-outlet></router-outlet>
   </div>
 </div>
