--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,7 +1,8 @@
 <a
+  [routerLink]="[recipe.id]"
+  [routerLinkActive]="'active'"
   style="cursor: pointer;"
   class="list-group-item list-group-item-action clearfix d-flex justify-content-between align-items-center"
-  (click)="onSelected()"
 >
   <div class="col-8 col-md-8">
     <div class="card-body">
@@ -10,6 +11,9 @@
     </div>
   </div>
   <div class="col-4 col-md-4">
-    <img [src]="recipe.imagePath" alt="" class="img-responsive" style="max-height: 140px;">
+    <img [src]="recipe.imagePath"
+         alt="{{ recipe.name }}"
+         class="img-responsive"
+         style="max-height: 140px;">
   </div>
 </a>
