--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -7,7 +7,8 @@
 <div class="row">
   <div class="col-sm-12 list-group">
     <app-recipe-item
-    *ngFor="let recipeElement of recipes"
-    [recipe]="recipeElement"></app-recipe-item>
+    *ngFor="let recipeElement of recipes; let i = identifier"
+    [recipe]="recipeElement"
+    [identifier]="i"></app-recipe-item>
   </div>
 </div>
