--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,13 +1,13 @@
 <div class="row">
   <div class="col-sm-12">
-    <button class="btn btn-success">New Recipe</button>
+    <button class="btn btn-success" (click)="onNewRecipe()">New Recipe</button>
   </div>
 </div>
 <hr>
 <div class="row">
   <div class="col-sm-12 list-group">
     <app-recipe-item
-    *ngFor="let recipeElement of recipes | async ; let i = identifier"
+    *ngFor="let recipeElement of recipes ; let i = identifier"
     [recipe]="recipeElement"
     [identifier]="i"></app-recipe-item>
   </div>
