homepage with an overwritten css property depending on the current url: done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<div class="container mt-2">
+<div class="container mt-2" [class.container-homepage]="isHome" >
   <div class="row">
     <div class="col-12 col-md-12">
       <router-outlet></router-outlet>
