--- a/src/app/homepage/homepage.component.sass
+++ b/src/app/homepage/homepage.component.sass
@@ -3,10 +3,15 @@ $theme-primary:    #fdcc52
 $theme-secondary:  #7b4397
 $theme-tertiary:   #dc2430
 
+.container-homepage
+  width: 100vw !important
+  margin: 0 !important
+  padding-left: 0 !important
+
 header.masthead
   position: relative
 
-  width: 100%
+  width: 100vw !important
   padding-top: 150px
   padding-bottom: 100px
 
