Credentials added + PUST & POST method: done

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,8 @@
     </div>
   </div>
 </div>
+<footer class="footer">
+  <div class="container container-footer mt-2">
+    <span>All Rights Reserved 2021 <a href="https://github.com/Ahiiia92">@Ahiiia92</a></span>
+  </div>
+</footer>
