--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -26,14 +26,32 @@
         class="help-footnote">Please enter an Image path</span>
     </div>
 
+<!--    <div class="form-group">-->
+<!--      <label for="difficulty">Difficulty</label>-->
+<!--      <select class="form-control" id="difficulty" name="Difficulty" formControlName="difficulty">-->
+<!--          <option value="easy" >Easy</option>-->
+<!--          <option value="medium" >Medium</option>-->
+<!--          <option value="difficult" >Difficult</option>-->
+<!--      </select>-->
+<!--    </div>-->
+
     <div class="form-group">
       <label for="ingredients">Ingredients</label>
-      <select class="form-control" id="ingredients" name="Ingredients" formControlName="ingredient">
+      <select class="form-control" id="ingredients" name="Ingredients" formControlName="ingredients">
         <div  *ngFor="let ingredient of ingredients">
           <option [value]="ingredient"  >{{ ingredient }}</option>
         </div>
       </select>
     </div>
+
+<!--    <div class="form-group">-->
+<!--      <label for="category">Category</label>-->
+<!--      <select class="form-control" id="category" name="category" formControlName="category">-->
+<!--          <option value="category"  >{{ category }}</option>-->
+<!--          <option value="category"  >{{ category }}</option>-->
+<!--          <option value="category"  >{{ category }}</option>-->
+<!--      </select>-->
+<!--    </div>-->
 
     <button type="submit" class="btn btn-success">Submit</button>
 
