commented out ingredients. TODO fix bug connexion with backen

--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -35,14 +35,14 @@
 <!--      </select>-->
 <!--    </div>-->
 
-    <div class="form-group">
-      <label for="ingredients">Ingredients</label>
-      <select class="form-control" id="ingredients" name="Ingredients" formControlName="ingredients">
-        <div  *ngFor="let ingredient of ingredients">
-          <option [value]="ingredient"  >{{ ingredient }}</option>
-        </div>
-      </select>
-    </div>
+<!--    <div class="form-group">-->
+<!--      <label for="ingredients">Ingredients</label>-->
+<!--      <select class="form-control" id="ingredients" name="Ingredients" formControlName="ingredients">-->
+<!--        <div  *ngFor="let ingredient of ingredients">-->
+<!--          <option [value]="ingredient"  >{{ ingredient }}</option>-->
+<!--        </div>-->
+<!--      </select>-->
+<!--    </div>-->
 
 <!--    <div class="form-group">-->
 <!--      <label for="category">Category</label>-->
