authentication done ... NEED Backend connexion

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,12 +8,15 @@
     </div>
     <div class="navbar-collapse" [class.collapse]="collapsed" (window:resize)="collapsed = true">
       <ul class="nav navbar-nav mr-auto">
-        <li class="nav-item"><a [routerLink]="['recipes']" [routerLinkActive]="'active'" class="nav-link">Recipes</a></li>
-        <li class="nav-item"><a [routerLink]="['login']" class="nav-link" [routerLinkActive]="'active'" >Authenticate</a></li>
-        <li class="nav-item"><a [routerLink]="['shopping-list']" class="nav-link" [routerLinkActive]="'active'" >Shopping List</a></li>
+        <li class="nav-item"><a [routerLink]="['recipes']" [routerLinkActive]="'active'" class="nav-link" *ngIf="isAuthenticated">Recipes</a></li>
+        <li class="nav-item"><a [routerLink]="['auth']" class="nav-link" [routerLinkActive]="'active'" *ngIf="!isAuthenticated">Authenticate</a></li>
+        <li class="nav-item"><a [routerLink]="['shopping-list']" class="nav-link" [routerLinkActive]="'active'" *ngIf="isAuthenticated" >Shopping List</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="nav-item dropdown" (click)="show = !show">
+        <li class="nav-item" *ngIf="isAuthenticated">
+          <a style="cursor: pointer" class="nav-link" (click)="onLogout()">Logout</a>
+        </li>
+        <li class="nav-item dropdown" (click)="show = !show"  *ngIf="isAuthenticated">
           <a style="cursor: pointer;" class="nav-link dropdown-toggle" role="button">Manage<span class="ui-icon-caret-1-e"></span></a>
           <div class="dropdown-menu" [class.show]="show" >
             <a style="cursor: pointer;" class="dropdown-item">Save Data</a>
